cabal-version:       2.2
name:                javascript-extras
version:             1.0.0.0
synopsis:            Extra javascript functions when using GHCJS
description:         Extra javascript functions when using GHCJS. Please see at README.md.
homepage:            https://github.com/louispan/javascript-extras#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Louis Pan
maintainer:          louis@pan.me
copyright:           2019 Louis Pan
category:            Web
stability:           experimental
build-type:          Simple
extra-source-files:  README.md
                   , CHANGELOG.md
                   , package.json

library
  default-language:    Haskell2010
  hs-source-dirs:      src
  js-sources:          jsbits/javascript-extras.js
  exposed-modules:     JS
                       JS.Aeson.Instances
                       JS.Cast
                       JS.Types
                       JS.Data
                       JS.Data.Instances
                       JS.Data.Object
                       JS.Data.Object.Internal
                       JS.Data.Unsafe
  build-depends:       base >= 4.7 && < 5
                     , aeson >= 1.4.2
                     , aeson-applicative >= 1.4
                     , deepseq >= 1.4
                     , hashable >= 1.2
                     , ghcjs-base-stub >= 0.3.0.2
                     , lens >= 4.14
                     , newtype-generics >= 0.5
                     , parallel >= 3.2
                     , text >= 1.2

source-repository head
  type:     git
  location: https://github.com/louispan/javascript-extras
