cabal-version:       2.2
name:                javascript-extras
version:             1.0.0.0
synopsis:            Extra javascript functions when using GHCJS
description:         Extra javascript functions when using GHCJS. Please see at README.md.
homepage:            https://github.com/louispan/javascript-extras#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Louis Pan
maintainer:          louis@pan.me
copyright:           2019 Louis Pan
category:            Web
stability:           experimental
build-type:          Simple
extra-source-files:  README.md
                   , CHANGELOG.md
                   , package.json

library
  default-language:    Haskell2010
  hs-source-dirs:      src
  js-sources:          jsbits/javascript-extras.js
  exposed-modules:     JS.Aeson.Instances
                       JS.Data
                       JS.Data.Cast
                       JS.Data.Instances
                       JS.Data.Object
                       JS.Data.Object.Internal
                       JS.Data.Unsafe
                       JS.DOM
                       JS.DOM.Event
                       JS.DOM.Event.Internal
                       JS.DOM.Event.UI
                       JS.DOM.Event.UI.Internal
                       JS.DOM.Event.UI.Keyboard
                       JS.DOM.Event.UI.Keyboard.Internal
                       JS.DOM.Event.UI.Mouse
                       JS.DOM.Event.UI.Mouse.Internal
                       JS.DOM.Event.HashChange
                       JS.DOM.Event.HashChange.Internal
                       JS.DOM.EventTarget
                       JS.DOM.EventTarget.Internal
                       JS.DOM.EventTarget.Node
                       JS.DOM.EventTarget.Node.Internal
                       JS.DOM.EventTarget.Node.Document
                       JS.DOM.EventTarget.Node.Document.Internal
                       JS.DOM.EventTarget.Node.Element
                       JS.DOM.EventTarget.Node.Element.Internal
                       JS.DOM.EventTarget.Node.Element.HTML
                       JS.DOM.EventTarget.Node.Element.HTML.Internal
                       JS.DOM.EventTarget.Window
                       JS.DOM.EventTarget.Window.Internal
  build-depends:       base >= 4.7 && < 5
                     , aeson >= 1.4.2
                     , aeson-applicative >= 1.4
                     , deepseq >= 1.4
                     , hashable >= 1.2
                     , ghcjs-base-stub >= 0.3.0.2
                     , lens >= 4.14
                     , newtype-generics >= 0.5
                     , parallel >= 3.2
                     , text >= 1.2

source-repository head
  type:     git
  location: https://github.com/louispan/javascript-extras
